# lizardpi

./: CMakeLists.txt  main.c  server.py
cmake/: WiringPi.cmake
libepaper/: CMakeLists.txt  epaper.h
